--- a/docs/assets/css/d3Style.css
+++ b/docs/assets/css/d3Style.css
@@ -1,6 +1,6 @@
 .aText {
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 30px;
   text-anchor: middle;
 }
 
@@ -12,8 +12,7 @@
 }
 
 .inactive {
-  font-weight: lighter;
-  fill: #c9c9c9;
+  fill: #9b9292;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
 }
@@ -29,12 +28,6 @@
   fill: #fff;
   text-anchor: middle;
 }
-
-.stateCircle {
-  fill: #89bdd3;
-  stroke: #e3e3e3;
-}
-
 .chart {
   display: block;
   margin: 0;
@@ -42,7 +35,7 @@
 
 .d3-tip {
   padding: 6px;
-  font-size: 12px;
+  font-size: 20px;
   line-height: 1;
   line-height: 1.5em;
   color: #fff;
