updated to include three axess x two; responsive to selection

--- a/docs/assets/css/d3Style.css
+++ b/docs/assets/css/d3Style.css
@@ -4,6 +4,12 @@
   text-anchor: middle;
 }
 
+.axes{
+  font-family: sans-serif;
+  font-size: 25px;
+  fill: "#9b9292";
+}
+
 .active {
   font-weight: bold;
   fill: #000;
