--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -26,3 +26,17 @@ body {
   margin: 0;
   font-size: 16px;
 }
+
+h1{
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+h4{
+  color: white;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
