--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -40,3 +40,32 @@ h4{
   margin-bottom: 30px;
 }
 
+.article{
+  margin: 100px;
+}
+
+h2{
+  color: rgb(39, 71, 177);
+  font-weight: bold;
+  margin-bottom: 30px;
+  font-size: 40px;
+}
+
+.card-header{
+  font-size: 50px;
+  font-family: sans-serif;
+}
+
+.infobox{
+  margin: 20px;
+  padding-left: 50px;
+  font-family: sans-serif;
+}
+
+.card-text{
+  font-size: 30px;
+}
+
+.info{
+  background-color: rgb(66, 58, 58);
+}
