--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -31,13 +31,14 @@ h1{
   color: white;
   text-align: center;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  font-size: 25px;
 }
 
 h4{
   color: white;
-  font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  font-size: 20px;
 }
 
 h2{
