--- a/docs/assets/css/d3Style.css
+++ b/docs/assets/css/d3Style.css
@@ -7,7 +7,7 @@
 .axes{
   font-family: sans-serif;
   font-size: 20px;
-  fill: "#9b9292";
+  fill: #9b9292;
 }
 
 .active {
@@ -60,10 +60,17 @@
   .aText {
     font-size: 14px;
   }
+
+  .axes{
+    font-size: 15px;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .aText {
     font-size: 13px;
+  }
+  .axes{
+    font-size: 12px;
   }
 }
